fixed task overflow, delete tag not deleting from other tasks

--- a/src/styling/taskitem.scss
+++ b/src/styling/taskitem.scss
@@ -1,6 +1,6 @@
 .task-item {
   position: relative;
-  width: 20vw;
+  width: 100%;
   height: 100%;
   block-size: fit-content;
   background: var(--light);
