--- a/src/styling/taskmain.scss
+++ b/src/styling/taskmain.scss
@@ -1,6 +1,15 @@
 .tasks-items {
   width: 100%;
+  height: 100%;
   padding: 1rem;
+  overflow-y: auto;
+  .tasks-items-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0.5rem;
+    margin-top: 1rem;
+  }
+
   .confirm-menu {
     position: absolute;
     top: 0;
@@ -76,21 +85,6 @@
           gap: 0.5rem;
         }
       }
-    }
-  }
-  .tasks-scroll {
-    width: 100%;
-    height: 100%;
-    min-height: 50vh;
-    overflow: auto;
-    .tasks-items-container {
-      width: 100%;
-      height: 100%;
-      gap: 1rem;
-      margin-top: 1rem;
-      border-radius: 15px;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
     }
   }
   .header {
